@@ -2,6 +2,7 @@ v.0003 Moar Cards
 - Updated for ArC v.0000006
 - Created TriggerZone component
 - Created ICardSpaceBindable interface
+- Added New cards, Crimson Butterfly, Brigitte (Grade 3) and Knight of the Harp, Tristan (Grade 2)
 
 v.0002 Skills and Trigger selection
 - Updated for ArC v.0000004
